--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,10 @@ img {
     height: 200px;
 }
 
-button {
+.btn {
+    background-color: green;
+    color: white;
+    padding: 7px;
     cursor: pointer;
     border-radius: 7px;
     transition: 0.3s;
