--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,16 @@ img {
     justify-content: center;
     text-align: center;
 }
+
+.like-button {
+    background: transparent;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  .like-button.liked {
+    color: #e63946;
+    transform: scale(1.2);
+  }
